methods.picture.PictureMono1.scala.error
Erreur de compilation :
PictureMono1:1: error: Missing closing brace `}' assumed here
override def run() {
^PictureMono1:1: error: expected start of definition
override def run() {
         ^PictureMono1:3: error: Missing closing brace `}' assumed here
  faireV()
  ^PictureMono1:7: error: expected class or object definition
def faireV() {
^